--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and Flutter development.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="https://drive.google.com/file/d/1hmG2QeYV1gww5kJvJt-sXGQY7QZbZ2A3/view?usp=sharing" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
